[package]
name = "machine-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = { version = "1.0.107", default-features = true }
tokio = { version = "1.32.0", features = [ "full" ]}
tokio-js-set-interval = "1.3.0"
warp = "0.3.5"
